modify home page hero -add hero text content inside a separate container to fix alignment and responsive issues when attempting to style main -add class styling to hero__content to use the grid template areas and previously assigned styling

--- a/resources/css/mediaqueries.css
+++ b/resources/css/mediaqueries.css
@@ -28,10 +28,6 @@
     max-width: 475px;
   }
 
-  main :is(.hero, section) {
-    padding-inline: min(2rem, 4rem);
-  }
-
   #about p {
     text-align: justify;
   }
