--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -171,15 +171,7 @@ nav a:active {
 }
 
 .hero {
-  display: grid;
-  grid-template-areas:
-    "img"
-    "h1"
-    "paragraph"
-    "button";
-  gap: .5rem;
-  justify-items: center;
-  align-items: center;
+
   background:
     /* top, transparent white, faked with gradient */
     linear-gradient(rgba(255, 255, 255, 86%),
@@ -188,8 +180,20 @@ nav a:active {
     url("../images/backgrounds-and-elements/systems-and-organization.png");
   background-size: cover;
   background-position: center;
+  height: 34rem;
+}
+
+.hero__content {
+  display: grid;
+  grid-template-areas:
+    "img"
+    "h1"
+    "paragraph"
+    "button";
+  gap: 1.5rem;
+  justify-items: center;
+  align-items: center;
   padding: 0 8% 2rem;
-  height: 32rem;
 }
 
 .hero img {
